--- a/views/members.ejs
+++ b/views/members.ejs
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid d-none d-md-block text-center">
+        <div class="container-fluid d-none d-lg-block text-center">
             <div class="row justify-content-center">
                 <% catPics.forEach(function(cat) { %>
                     <div class="col-2 p-2">
@@ -41,9 +41,23 @@
                     <% }) %>
             </div>
         </div>
+        <div class="container d-lg-none d-md-block d-sm-none text-center">
+            <div class="row justify-content-center">
+                <% catPics.forEach(function(cat) { %>
+                    <div class="col-6 p-2">
+                        <div class="card">
+                            <img src="<%=cat%>" class="card-img-top" alt="cat" />
+                            <div class="card-body">
+                                <p class="card-text">Miso and Nori :&rpar;</p>
+                            </div>
+                        </div>
+                    </div>
+                    <% }) %>
+            </div>
+        </div>
         <div class="container d-md-none text-center">
             <% catPics.forEach(function(cat) { %>
-                <div class="row justify-content-center">
+                <div class="row justify-content-center p-2">
                     <div class="card" style="width: 18rem;">
                         <img src="<%=cat%>" class="card-img-top" alt="cat" />
                         <div class="card-body">
