--- a/views/notAMember.ejs
+++ b/views/notAMember.ejs
@@ -21,7 +21,7 @@
         <div class="container p-4">
             <div class="card">
                 <div class="card-header">
-                    This is supposed to be the members page but..
+                    This is supposed to be a page but..
                 </div>
                 <div class="card-body">
                     <h2 class="card-title">
